--- a/ContactList/Storyboards/Base.lproj/Main.storyboard
+++ b/ContactList/Storyboards/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -23,6 +24,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="WW4-UH-krt" kind="show" id="sQC-gL-zcV"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -30,11 +34,79 @@
                             <outlet property="delegate" destination="gWA-6r-yHx" id="iUP-Hw-W9N"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Persons List" id="XAh-Oz-Wwv"/>
+                    <navigationItem key="navigationItem" title="Persons List" id="XAh-Oz-Wwv">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="XcK-nm-bfx"/>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KAM-PE-avp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="708" y="-18"/>
+            <point key="canvasLocation" x="564" y="-18"/>
+        </scene>
+        <!--Person Details View Controller-->
+        <scene sceneID="Lmi-FQ-XTc">
+            <objects>
+                <viewController id="WW4-UH-krt" customClass="PersonDetailsViewController" customModule="ContactList" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gIs-3z-yBT">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="GFe-ol-vCp">
+                                <rect key="frame" x="16" y="195" width="361" height="78"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="W7V-Ly-P1P">
+                                        <rect key="frame" x="0.0" y="0.0" width="134.33333333333334" height="24"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d6H-ms-g6y">
+                                                <rect key="frame" x="0.0" y="0.0" width="61" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="123456" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="efW-1K-G6b">
+                                                <rect key="frame" x="66" y="0.0" width="68.333333333333314" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="gMz-kB-gCf">
+                                        <rect key="frame" x="0.0" y="54" width="171.33333333333334" height="24"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="acD-wJ-VGx">
+                                                <rect key="frame" x="0.0" y="0.0" width="52.333333333333336" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="qwe@qwe.ru" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OFz-Hc-a8k">
+                                                <rect key="frame" x="57.333333333333329" y="0.0" width="113.99999999999999" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="2h7-To-mdq"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="2h7-To-mdq" firstAttribute="trailing" secondItem="GFe-ol-vCp" secondAttribute="trailing" constant="16" id="kxu-gU-dCw"/>
+                            <constraint firstItem="GFe-ol-vCp" firstAttribute="leading" secondItem="2h7-To-mdq" secondAttribute="leading" constant="16" id="mPf-1H-PaG"/>
+                            <constraint firstItem="GFe-ol-vCp" firstAttribute="top" secondItem="2h7-To-mdq" secondAttribute="top" constant="40" id="uoG-qj-rFa"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="kRp-IH-McE"/>
+                    <connections>
+                        <outlet property="emailAddressLabel" destination="OFz-Hc-a8k" id="hIh-FU-MbI"/>
+                        <outlet property="phoneNumberLabel" destination="efW-1K-G6b" id="Jq0-KH-FFo"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="W3e-tD-KKJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1345.8015267175572" y="-18.30985915492958"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="g8K-VG-oi7">
