--- a/ContactList/Storyboards/Base.lproj/Main.storyboard
+++ b/ContactList/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zH9-dl-2Vp">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zA1-a6-IOF">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -34,6 +34,7 @@
                             <outlet property="delegate" destination="gWA-6r-yHx" id="iUP-Hw-W9N"/>
                         </connections>
                     </tableView>
+                    <tabBarItem key="tabBarItem" title="Contacts" image="person.crop.circle.fill" catalog="system" id="fmV-u6-Tk8"/>
                     <navigationItem key="navigationItem" title="Persons List" id="XAh-Oz-Wwv">
                         <barButtonItem key="backBarButtonItem" title="Back" id="XcK-nm-bfx"/>
                     </navigationItem>
@@ -131,11 +132,12 @@
                             <outlet property="delegate" destination="und-GR-Biv" id="aQG-uX-ihR"/>
                         </connections>
                     </tableView>
+                    <tabBarItem key="tabBarItem" title="Contants" image="person.crop.circle.fill" catalog="system" id="hYK-Di-ThV"/>
                     <navigationItem key="navigationItem" title="Persons List" id="GSW-Mw-w68"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xUG-sb-2YV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2425" y="-27"/>
+            <point key="canvasLocation" x="1541" y="-27"/>
         </scene>
         <!--Contacts-->
         <scene sceneID="00e-q5-rHe">
@@ -147,43 +149,27 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="und-GR-Biv" kind="relationship" relationship="rootViewController" id="28U-i3-USt"/>
+                        <segue destination="zH9-dl-2Vp" kind="relationship" relationship="rootViewController" id="Ihf-5k-i8c"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kTE-KE-AuA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1552" y="-27"/>
+            <point key="canvasLocation" x="-86" y="-761"/>
         </scene>
-        <!--Contacts-->
-        <scene sceneID="g8K-VG-oi7">
-            <objects>
-                <navigationController id="uEp-mV-sg0" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Contacts" image="person.crop.circle.fill" catalog="system" id="3VM-1P-3oP"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="zXw-lT-FTy">
-                        <rect key="frame" x="0.0" y="59" width="393" height="96"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="gWA-6r-yHx" kind="relationship" relationship="rootViewController" id="K7X-vg-jk3"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="zFZ-fy-Odj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-92" y="-27"/>
-        </scene>
-        <!--Tab Bar Controller-->
+        <!--Peroson List-->
         <scene sceneID="3fc-x5-L7c">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="zH9-dl-2Vp" sceneMemberID="viewController">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="zH9-dl-2Vp" customClass="TabBarViewController" customModule="ContactList" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Peroson List" id="R4d-Eg-Sz6"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ho1-4E-r0C">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="uEp-mV-sg0" kind="relationship" relationship="viewControllers" id="8s7-rU-eVD"/>
-                        <segue destination="zA1-a6-IOF" kind="relationship" relationship="viewControllers" id="Msl-AJ-wnX"/>
+                        <segue destination="gWA-6r-yHx" kind="relationship" relationship="viewControllers" id="gWh-KS-Va7"/>
+                        <segue destination="und-GR-Biv" kind="relationship" relationship="viewControllers" id="ydZ-vl-Nbp"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x1m-Re-ENF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
